[package]
name = "sysinfo-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["macros", "ws"] }
serde_json = "1.0.108"
sysinfo = "0.29.11"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }